# yolo_ros

./: CMakeLists.txt  README.md  package.xml
launch/: yolo.launch
src/: yolo_ros_node.py
